--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
     line-height: 1.15;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.3em;
-    background-color: white;
+    background-color: burlywood;
 }
 
 body {
@@ -13,4 +13,3 @@ h1 {
     font-size: 3em;
     margin: 0.67em 0;
 }
-
